<resources>
    <string name="app_name">Zamza</string>
    <string name="title_activity_drawer">Drawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="cold_calling">Cold calling</string>
    <string name="debt_repayment_term">Debt repayment term</string>
    <string name="meetings">Meetings</string>
    <string name="sales_training">Sales training</string>
    <string name="still">Still</string>
    <string name="delete_number">Number Delete</string>
    <string-array name="importance_meeting_string">
        <item >high is important</item>
        <item>medium important</item>
        <item>low is important</item>

    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="successfully">Successfully</string>
    <string name="not_successful">not successful</string>
    <string name="make_appointment">Make appointment</string>
    <string name="call_result">Call result</string>
    <string name="the_call_is_made">The call is made</string>
    <string name="good_call">Good call</string>
    <string name="not_good_call">Not a good call</string>
    <string name="call">Call</string>
    <string name="title_activity_maps">Map</string>
    <string name="delete">Delete</string>
    <string name="meeting_through">Meeting through :</string>
    <string name="show_in_the_map">Show in the map</string>
    <string name="name_company">Name company</string>
    <string name="place">Place</string>
    <string name="date_meeting">Date Meeting</string>
    <string name="time_meeting">Time Meeting</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="date">Date</string>
    <string name="name">name</string>
    <string name="time">Time</string>
</resources>
