<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <include layout="@layout/tool_bar"/>
    <LinearLayout android:layout_width="match_parent"
                  android:layout_height="wrap_content"
    android:layout_below="@+id/tool_bar"
    android:orientation="vertical"
    android:id="@+id/buttons">

        <Button android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:drawableLeft="@drawable/ic_local_phone_black_24dp"
                        android:layout_weight="1"
        android:text="@string/cold_calling"
        android:id="@+id/buttonCold"
        android:onClick="cold_calling"/>
        <Button android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:drawableLeft="@drawable/ic_timer"
                     android:layout_weight="1"
        android:text="@string/debt_repayment_term"
                android:onClick="debt_repayment_term"
        />
        <Button android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:drawableLeft="@drawable/ic_bag"
                     android:layout_weight="1"
        android:text="@string/meetings"
            android:onClick="meetings"/>

        <Button android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:drawableLeft="@drawable/ic_book"
                     android:layout_weight="1"
        android:text="@string/sales_training"
        android:onClick="sales_training"/>

        <Button android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:layout_weight="1"
        android:text="@string/still"/>
    </LinearLayout>
    <!--<ScrollView android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:layout_below="@+id/buttons"-->
                <!--android:layout_centerHorizontal="true"-->
    <!--&gt;-->
    <!--<CalendarView android:layout_width="wrap_content"-->
                  <!--android:layout_height="wrap_content"-->

  <!--&gt;-->

    <!--</CalendarView>-->
    <!--</ScrollView>-->
</RelativeLayout>